--- a/core/templates/core/2011.html
+++ b/core/templates/core/2011.html
@@ -1,170 +1,107 @@
-<!DOCTYPE html>
-<html lang="ko">
+<div class="jumbotron" id="y2011">
+  <div class="container">
+    <h1 class="display-4">2011 TEDxPOSTECH</h1>
+    <p class="lead">2011 TEDxPOSTECH을 빛내주셨던 연사분들을 소개합니다.</p>
+  </div>
+</div>
 
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<div class="speakers">
+  <div class="container">
 
-    <title>2017 TEDxPOSTECH</title>
-
-    <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
-    <script src="./bootstrap-3.3.7-dist/js/jquery-3.1.1.min.js"></script>
-    <script src="./bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-
-    <link rel="stylesheet" href="./css/common.css">
-    <link href="https://tedcdnpa-a.akamaihd.net/favicon.ico" rel="shortcut icon">
-  </head>
-          
-
-  <body>
-    <div class="header">
-      <div class="container">
-        <div class="logo">
-          <a href="index.html"><img src="./images/logo.png"></a>
+    <div class="row youtube">
+      <div class="col-xs-12">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/JBjTvoF9BEQ" frameborder="0" allowfullscreen></iframe>
         </div>
-        <ul class="pull-right nav nav-pills">
-          <li><a href="about.html">About</a></li>
-          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Past Event <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="2016.html">2016 TEDxPOSTECH</a></li>
-              <li><a href="2015.html">2015 TEDxPOSTECH</a></li>
-              <li id="active"><a href="2011.html">2011 TEDxPOSTECH</a></li>
-            </ul>
-          </li>
-          <li><a href="speakers.html">Speakers</a></li>
-          <li><a href="organizers.html">Organizers</a></li>
-          <li><a href="sponsors.html">Sponsors</a></li>
-          <li><a href="register.html">Register</a></li>
-        </ul>
       </div>
     </div>
 
-    <div class="jumbotron" id="y2011">
-      <div class="container">
-        <h1>2011 TEDxPOSTECH</h1>
-        <p>2011 TEDxPOSTECH을 빛내주셨던 연사분들을 소개합니다.</p>
+    <div class="row">
+      <div class="col-xs-4">
+        <img src="./images/speakers/2011/speakers_shj.jpg" class="img-circle center-block">
+      </div>
+      <div class="col-xs-8">
+        <h3>송호준</h3>
+        <p>송호준 작가님은 고려대 전기전자전파공학부를 졸업한 미디어아트 작가로, 초창기에는 미디어아트와 관련된 작품을 선보였습니다. 이후, 대전에 있는 우주항공 전문기업 “쎄트렉아이’에서 1년 남짓 인턴을 하셨고, 2013년 4월 19일 카자흐스탄 발사기지에서 가로 10cm, 세로 10cm의 조그마한 개인위성을 쏘아 올렸습니다. 위성을 제작하는 데 필요한 설계도를 공개하며, 과학의 대중화를 이끌고 계십니다.</p>
+        <p>하고 싶은 대로 해본 적 있나요? 여기, 밤하늘에 나만의 별을 갖고 싶다고 생각한 사람이 있습니다. 송호준 작가님은 ‘개인은 인공위성을 쏠 수 없을까?’라는 물음을 바탕으로 오픈 소스 인공위성 프로젝트를 진행하고 계십니다. 접근하기 힘든 인공위성 발사 과정을 오픈소스로 제공하는 작가님은, ‘무언가 이루겠다고 정해놓지 마세요. 자기가 하고 싶은 것, 재미있는 것을 먼저 찾아서 시작해 보세요’ 라고 말합니다. ‘Doer’ 송호준의 이야기, 다 함께 나눠볼까요?</p>
       </div>
     </div>
 
-    <div class="speakers">
-      <div class="container">
-
-        <div class="row youtube">
-          <div class="col-xs-12">
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/JBjTvoF9BEQ" frameborder="0" allowfullscreen></iframe>
-            </div>
-          </div>
+    <div class="row youtube">
+      <div class="col-xs-12">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zu5A6K-beBA" frameborder="0" allowfullscreen></iframe>
         </div>
-
-        <div class="row">
-          <div class="col-xs-4">
-            <img src="./images/speakers/2011/speakers_shj.jpg" class="img-circle center-block">
-          </div>
-          <div class="col-xs-8">
-            <h3>송호준</h3>
-            <p>송호준 작가님은 고려대 전기전자전파공학부를 졸업한 미디어아트 작가로, 초창기에는 미디어아트와 관련된 작품을 선보였습니다. 이후, 대전에 있는 우주항공 전문기업 “쎄트렉아이’에서 1년 남짓 인턴을 하셨고, 2013년 4월 19일 카자흐스탄 발사기지에서 가로 10cm, 세로 10cm의 조그마한 개인위성을 쏘아 올렸습니다. 위성을 제작하는 데 필요한 설계도를 공개하며, 과학의 대중화를 이끌고 계십니다.</p>
-            <p>하고 싶은 대로 해본 적 있나요? 여기, 밤하늘에 나만의 별을 갖고 싶다고 생각한 사람이 있습니다. 송호준 작가님은 ‘개인은 인공위성을 쏠 수 없을까?’라는 물음을 바탕으로 오픈 소스 인공위성 프로젝트를 진행하고 계십니다. 접근하기 힘든 인공위성 발사 과정을 오픈소스로 제공하는 작가님은, ‘무언가 이루겠다고 정해놓지 마세요. 자기가 하고 싶은 것, 재미있는 것을 먼저 찾아서 시작해 보세요’ 라고 말합니다. ‘Doer’ 송호준의 이야기, 다 함께 나눠볼까요?</p>
-          </div>
-        </div>
-
-        <div class="row youtube">
-          <div class="col-xs-12">
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zu5A6K-beBA" frameborder="0" allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-xs-4">
-            <img src="./images/speakers/2011/speakers_hjh.jpg" class="img-circle center-block">
-          </div>
-          <div class="col-xs-8">
-            <h3>현재호</h3>
-            <p>현재호 이사님은, 1992년 한국과학기술원에서 경영과학 박사를 받으신 이후 과학기술정책연구소 연구개발정책실장, 과학기술평가원 연구위원, ㈜기술과가치 공동대표이사직을 거쳐 ㈜테크노베이션파트너스 대표이사로 활동하고 계십니다. 창조적이며 재능 있는 인력을 발굴하여 최고의 기술경영 전문컨설턴트로 키우는 것을 추구하고 계십니다.</p>
-            <p>모두가 창조와 혁신을 외치는 시대, 창조적 혁신은 가장 올바른 답으로 여겨지곤 합니다. 하지만 우리는 올바른 답을 향해 나아가고 있을까요? 창조적 혁신은 어떻게 하는 것일까요? 현재호 이사님께서는, 창조적 전략을 수립하기 위해서는 몇 가지 요소가 필요하다고 말씀하십니다. 이공계 학생들에게 전하는 창조적 혁신의 열쇠, 지금 함께 만나볼까요?</p>
-          </div>
-        </div>
-
-        <div class="row youtube">
-          <div class="col-xs-12">
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/TQYFMyS4P0g" frameborder="0" allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-xs-4">
-            <img src="./images/speakers/2011/speakers_ayi.png" class="img-circle center-block">
-          </div>
-          <div class="col-xs-8">
-            <h3>안영일</h3>
-            <p>안영일 대표님은 포항공과대학교 산업경영공학과를 졸업하시고, IBM Korea IT서비스 영업 및 컨설팅 팀을 거쳐 DCG 그룹(Dream Challenge Group)의 CEO이자, 대표에너지 아티스트로 활동하고 계십니다. 뮤지컬 ‘사무라이 컴백 투 비보이’ 무대 연출 및 시각디자인을 맡으셨고, 2014년 동아일보 선정 10년 뒤 한국을 빛낼 위인 100인에 선정되셨습니다. 항상 새롭게 도전하고, ‘Why?’ 라는 질문을 끊임없이 던지면서 자신의 방향을 만들어가고 계십니다.</p>
-            <p>인간은 꿈을 꾸는 존재입니다. 과거를 후회하고, 미래를 준비하며 오늘을 살아가는 존재입니다. 당신의 꿈은 무엇인가요? 우리는 미래에 어떻게 될까요? 여기 새로운 출발을 준비하는 사람들에게는 용기를, 방향을 잃은 사람들에게는 ‘너 하고 싶은 대로 하고 살아라!’ 고 자신 있게 말하는 행동가가 있습니다. 이번 강연에서는 그 깨달음의 기쁨을 함께 느끼는 시간을 갖고자 합니다.</p>
-          </div>
-        </div>
-
-        <div class="row youtube">
-          <div class="col-xs-12">
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/kQlgzeOh18g" frameborder="0" allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-xs-4">
-            <img src="./images/speakers/2011/speakers_bsg.png" class="img-circle center-block">
-          </div>
-          <div class="col-xs-8">
-            <h3>백성기</h3>
-            <p>백성기 교수님은, 1971년 서울대학교 금속공학과 학사, 1981년 코넬대학교 재료공학 박사 학위를 받으시고, 1986년 포항공과대학교 교수로 부임하신 이후 2007년 제5대 포항공과대학교 총장으로 재직하셨습니다. 국가교육과학기술자문회의 과학기술분야 위원장으로 활동하시며 한국 과학의 미래를 키우는 데 이바지하고 계십니다.</p>
-            <p>세계시장 속 한국은 어떤 모습일까요? 한국의 기존 성장동력은 고용 없는 성장을 계속하고 있으며, 한국 대학생들의 50%는 직업을 얻지 못하고 있습니다. 백성기 총장님께서는, 한국이 발전하기 위해서 Hardware, Software를 넘어선 특별한 것이 필요하다고 말씀하십니다. 그 특별한 “무엇”을 함께 찾아볼까요?</p>
-          </div>
-        </div>
-
-        <div class="row youtube">
-          <div class="col-xs-12">
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/TquPy_3_P1Q" frameborder="0" allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-xs-4">
-            <img src="./images/speakers/2011/speakers_gsn.jpg" class="img-circle center-block">
-          </div>
-          <div class="col-xs-8">
-            <h3>곽소나</h3>
-            <p>곽소나 교수님은 이화여대 산업디자인전공/디자인학부 소속으로, KAIST 산업디자인학과에서 박사학위를 받으셨으며, 지능형 제품디자인과 인간-로봇 상호작용 디자인에 대한 연구를 진행하고 계씹니다. 2015년 제10회 ACM/IEEE 국제 인간-로봇 상호작용 학술대회 디자인위원장 등 국제학술대회 조직위원으로 활동하시며 인간과 로봇의 상호작용을 위해 힘쓰고 계십니다.</p>
-            <p>미래 사회에서 인류와 로봇은 어떤 관계를 맺게 될까요? 여기, 인류와 로봇의 상호작용을 통한 평화로운 공존을 주장하는 사람이 있습니다. 곽소나 교수님께서는 아이들에게 한글을 가르칠 수 있는 한글교육용 로봇을 개발하고, 욕설을 하면 몸체가 멍이 든 것처럼 파랗게 변했다가, 애정어린 말을 하면 붉은 색으로 변하는 로봇 등 따뜻한 감성을 전하는 로봇을 통해 Social Robot이라는 분야를 개척해 나가는 교수님의 미래 이야기, 함께 나눠볼까요?</p>
-          </div>
-        </div>
-
       </div>
     </div>
 
-    <div class="footer">
-      <div class="container">
-        <p class="pull-left">※This independent TEDx event is operated under license from TED.</p>
-        <p class="pull-right"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> tedx.postech.organizer@gmail.com</p>
+    <div class="row">
+      <div class="col-xs-4">
+        <img src="./images/speakers/2011/speakers_hjh.jpg" class="img-circle center-block">
+      </div>
+      <div class="col-xs-8">
+        <h3>현재호</h3>
+        <p>현재호 이사님은, 1992년 한국과학기술원에서 경영과학 박사를 받으신 이후 과학기술정책연구소 연구개발정책실장, 과학기술평가원 연구위원, ㈜기술과가치 공동대표이사직을 거쳐 ㈜테크노베이션파트너스 대표이사로 활동하고 계십니다. 창조적이며 재능 있는 인력을 발굴하여 최고의 기술경영 전문컨설턴트로 키우는 것을 추구하고 계십니다.</p>
+        <p>모두가 창조와 혁신을 외치는 시대, 창조적 혁신은 가장 올바른 답으로 여겨지곤 합니다. 하지만 우리는 올바른 답을 향해 나아가고 있을까요? 창조적 혁신은 어떻게 하는 것일까요? 현재호 이사님께서는, 창조적 전략을 수립하기 위해서는 몇 가지 요소가 필요하다고 말씀하십니다. 이공계 학생들에게 전하는 창조적 혁신의 열쇠, 지금 함께 만나볼까요?</p>
       </div>
     </div>
 
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    <div class="row youtube">
+      <div class="col-xs-12">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/TQYFMyS4P0g" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
 
-      ga('create', 'UA-68683638-1', 'auto');
-      ga('send', 'pageview');
+    <div class="row">
+      <div class="col-xs-4">
+        <img src="./images/speakers/2011/speakers_ayi.png" class="img-circle center-block">
+      </div>
+      <div class="col-xs-8">
+        <h3>안영일</h3>
+        <p>안영일 대표님은 포항공과대학교 산업경영공학과를 졸업하시고, IBM Korea IT서비스 영업 및 컨설팅 팀을 거쳐 DCG 그룹(Dream Challenge Group)의 CEO이자, 대표에너지 아티스트로 활동하고 계십니다. 뮤지컬 ‘사무라이 컴백 투 비보이’ 무대 연출 및 시각디자인을 맡으셨고, 2014년 동아일보 선정 10년 뒤 한국을 빛낼 위인 100인에 선정되셨습니다. 항상 새롭게 도전하고, ‘Why?’ 라는 질문을 끊임없이 던지면서 자신의 방향을 만들어가고 계십니다.</p>
+        <p>인간은 꿈을 꾸는 존재입니다. 과거를 후회하고, 미래를 준비하며 오늘을 살아가는 존재입니다. 당신의 꿈은 무엇인가요? 우리는 미래에 어떻게 될까요? 여기 새로운 출발을 준비하는 사람들에게는 용기를, 방향을 잃은 사람들에게는 ‘너 하고 싶은 대로 하고 살아라!’ 고 자신 있게 말하는 행동가가 있습니다. 이번 강연에서는 그 깨달음의 기쁨을 함께 느끼는 시간을 갖고자 합니다.</p>
+      </div>
+    </div>
 
-    </script>
-	
-  </body>
-</html>
+    <div class="row youtube">
+      <div class="col-xs-12">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/kQlgzeOh18g" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-4">
+        <img src="./images/speakers/2011/speakers_bsg.png" class="img-circle center-block">
+      </div>
+      <div class="col-xs-8">
+        <h3>백성기</h3>
+        <p>백성기 교수님은, 1971년 서울대학교 금속공학과 학사, 1981년 코넬대학교 재료공학 박사 학위를 받으시고, 1986년 포항공과대학교 교수로 부임하신 이후 2007년 제5대 포항공과대학교 총장으로 재직하셨습니다. 국가교육과학기술자문회의 과학기술분야 위원장으로 활동하시며 한국 과학의 미래를 키우는 데 이바지하고 계십니다.</p>
+        <p>세계시장 속 한국은 어떤 모습일까요? 한국의 기존 성장동력은 고용 없는 성장을 계속하고 있으며, 한국 대학생들의 50%는 직업을 얻지 못하고 있습니다. 백성기 총장님께서는, 한국이 발전하기 위해서 Hardware, Software를 넘어선 특별한 것이 필요하다고 말씀하십니다. 그 특별한 “무엇”을 함께 찾아볼까요?</p>
+      </div>
+    </div>
+
+    <div class="row youtube">
+      <div class="col-xs-12">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/TquPy_3_P1Q" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-4">
+        <img src="./images/speakers/2011/speakers_gsn.jpg" class="img-circle center-block">
+      </div>
+      <div class="col-xs-8">
+        <h3>곽소나</h3>
+        <p>곽소나 교수님은 이화여대 산업디자인전공/디자인학부 소속으로, KAIST 산업디자인학과에서 박사학위를 받으셨으며, 지능형 제품디자인과 인간-로봇 상호작용 디자인에 대한 연구를 진행하고 계씹니다. 2015년 제10회 ACM/IEEE 국제 인간-로봇 상호작용 학술대회 디자인위원장 등 국제학술대회 조직위원으로 활동하시며 인간과 로봇의 상호작용을 위해 힘쓰고 계십니다.</p>
+        <p>미래 사회에서 인류와 로봇은 어떤 관계를 맺게 될까요? 여기, 인류와 로봇의 상호작용을 통한 평화로운 공존을 주장하는 사람이 있습니다. 곽소나 교수님께서는 아이들에게 한글을 가르칠 수 있는 한글교육용 로봇을 개발하고, 욕설을 하면 몸체가 멍이 든 것처럼 파랗게 변했다가, 애정어린 말을 하면 붉은 색으로 변하는 로봇 등 따뜻한 감성을 전하는 로봇을 통해 Social Robot이라는 분야를 개척해 나가는 교수님의 미래 이야기, 함께 나눠볼까요?</p>
+      </div>
+    </div>
+
+  </div>
+</div>
