--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -7,8 +7,8 @@
 
   <div class="jumbotron" id="about">
     <div class="container">
-      <h1>TED와 TEDx</h1>
-      <p>세계적으로 유명한 강연회 TED와 TED-like experience, TEDx를 소개합니다.</p>
+      <h1 class="display-4">TED와 TEDx</h1>
+      <p class="lead">세계적으로 유명한 강연회 TED와 TED-like experience, TEDx를 소개합니다.</p>
     </div>
   </div>
 
