--- a/core/templates/core/organizers.html
+++ b/core/templates/core/organizers.html
@@ -7,8 +7,8 @@
 <main>
   <div class="jumbotron" id="organizers">
     <div class="container">
-      <h1>Organizers</h1>
-      <p>2017 TEDxPOSTECH을 준비한 8명의 4th Organizer들을 소개합니다.</p>
+      <h1 class="display-4">Organizers</h1>
+      <p class="lead">2017 TEDxPOSTECH을 준비한 8명의 4th Organizer들을 소개합니다.</p>
     </div>
   </div>
 
