--- a/core/templates/core/register.html
+++ b/core/templates/core/register.html
@@ -6,8 +6,8 @@
 <main>
   <div class="jumbotron" id="register">
     <div class="container">
-      <h1>Register Now</h1>
-      <p>2017 TEDxPOSTECH에 참가하세요.</p>
+      <h1 class="display-4">Register Now</h1>
+      <p class="lead">2017 TEDxPOSTECH에 참가하세요.</p>
     </div>
   </div>
 
