--- a/core/templates/core/speakers.html
+++ b/core/templates/core/speakers.html
@@ -6,8 +6,8 @@
 <main>
   <div class="jumbotron" id="speakers">
     <div class="container">
-      <h1>Speakers</h1>
-      <p>2017 TEDxPOSTECH을 빛내주실 연사분들을 기대해주세요.</p>
+      <h1 class="display-4">Speakers</h1>
+      <p class="lead">2017 TEDxPOSTECH을 빛내주실 연사분들을 기대해주세요.</p>
     </div>
   </div>
 
