--- a/core/templates/core/sponsors.html
+++ b/core/templates/core/sponsors.html
@@ -6,8 +6,8 @@
 <main>
   <div class="jumbotron" id="sponsor">
     <div class="container">
-      <h1>Sponsors</h1>
-      <p>행사 진행에 도움을 주신 다양한 스폰서들을 소개합니다.</p>
+      <h1 class="display-4">Sponsors</h1>
+      <p class="lead">행사 진행에 도움을 주신 다양한 스폰서들을 소개합니다.</p>
     </div>
   </div>
 
