--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -7,7 +7,11 @@
 }
 
 h1 {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.bg-grey {
+  background-color: #f7f7f7;
 }
 
 /* HEADER */
@@ -19,45 +23,45 @@ header a {
 }
 
 header a.nav-link.active {
-    font-weight: bold;
-    color: red !important;
+  font-weight: bold;
+  color: red !important;
 }
 
 header .navbar-expand-lg .navbar-nav .nav-link {
-    padding-left: 15px;
-    padding-right: 15px;
-    border-radius: 4px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-radius: 4px;
 }
 
 header > nav li > a:focus, header > nav li > a:hover {
-    background-color: #eee;
+  background-color: #eee;
 }
 
 /* FOOTER */
 
 footer {
-    font-size: 11px;
+  font-size: 11px;
 }
 
 /* JUMBOTRON */
 
 .jumbotron {
-    padding: 4rem 1rem 20rem 1rem;
-    color: white;
-    text-shadow: rgba(0, 0, 0, 1) 3px 3px 5px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+  padding: 4rem 1rem 20rem 1rem;
+  color: white;
+  text-shadow: rgba(0, 0, 0, 1) 3px 3px 5px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .jumbotron h1 {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 @media screen and (max-width: 576px) {
-    .jumbotron h1 {
-        font-size: 35px;
-    }
+  .jumbotron h1 {
+    font-size: 35px;
+  }
 }
 
 .jumbotron#about {
