Fix css of about page

--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -17,7 +17,7 @@
 
       <div class="row border-bottom pb-3 mb-3">
 
-        <div class="col-xs-12 col-md-6 border-right">
+        <div class="col-xs-12 col-md-6 border-md-right">
           <img class="img-fluid img-thumbnail mb-3" src="/static/core/images/tedx.png">
           <h3>About TEDx<br>x = independently organized event</h3>
           <p class='text-justify'>TEDx는 널리 퍼져야할 아이디어(ideas worth spreading)라는 정신으로 사람들에게 TED스러운 경험을 나눌 수 있도록 지역적이고 자체적으로 조직되는 프로그램입니다. TEDx 행사에서는 TED 강연 영상과 현장의 연사들이 조화를 이루며 깊이 있는 논의와 소통에 불을 붙입니다. 이런 지역적이고 자체적으로 조직되는 행사를 TEDx라고 부르며, x는 독립적으로 조직된 TED 행사임을 가리킵니다. TED 컨퍼런스는 TEDx 행사를 위해서 가이드라인을 제공하지만, 독립적인 TEDx 행사는 (어떤 규칙이나 제한은 있지만) 자체적으로 조직됩니다. </p>
