--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -10,9 +10,30 @@ h1 {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
+/* UTILITY */
+
 .bg-grey {
   background-color: #f7f7f7;
 }
+
+@media screen and (min-width: 576px) {
+  .border-sm-right {
+    border-right: 1px solid #dbdbdb;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .border-md-right {
+    border-right: 1px solid #dbdbdb;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .border-lg-right {
+    border-right: 1px solid #dbdbdb;
+  }
+}
+
 
 /* HEADER */
 
