--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -10,10 +10,18 @@ h1 {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
+p {
+  text-align: justify;
+}
+
 /* UTILITY */
 
 .bg-grey {
   background-color: #f7f7f7;
+}
+
+.border-thick {
+  border-width: 4px !important;
 }
 
 @media screen and (min-width: 576px) {
@@ -34,6 +42,9 @@ h1 {
   }
 }
 
+.border-last-child-0:last-child {
+  border: none !important;
+}
 
 /* HEADER */
 
