--- a/core/templates/core/speakers.html
+++ b/core/templates/core/speakers.html
@@ -7,56 +7,28 @@
   <div class="jumbotron" id="speakers">
     <div class="container">
       <h1 class="display-4">Speakers</h1>
-      <p class="lead">2017 TEDxPOSTECH을 빛내주실 연사분들을 기대해주세요.</p>
+      {% if setting.event_now.is_end %}
+      <p class="lead">{{setting.event_now.year}} TEDxPOSTECH을 빛내주셨던 연사분들을 소개합니다.</p>
+      {% else %}
+      <p class="lead">{{setting.event_now.year}} TEDxPOSTECH을 빛내주실 연사분들을 기대해주세요.</p>
+      {% endif %}
     </div>
   </div>
 
-  <div class="speakers">
+  <div class="bg-grey border-top border-bottom my-5">
     <div class="container">
 
-      <div class="row">
-        <div class="col-xs-4">
-          <img src="./images/speakers/2017/speakers_ljy.jpg" class="img-circle center-block">
+      {% for speaker in speakers %}
+      <div class="row border-bottom border-last-child-0 py-4 align-items-center">
+        <div class="col-sm-12 col-md-4">
+          <img src="{{ speaker.image.url }}" class="border border-thick img-fluid rounded-circle mx-auto my-auto d-block">
         </div>
-        <div class="col-xs-8">
-          <h3>임재영</h3>
-          <p>임재영 센터장님은 정신과 의사로서 의왕시정신건강복지센터의 센터장을 맡고 계십니다. 센터장님은 찾아가는 고민상담소를 운영하시면서 방방곡곡을 돌아다니며 상담과 치료를 진행하고 계십니다.</p>
-          <p>선뜻 정신과에 찾아오기 힘들어하는 사람들을 찾아 트럭을 몰고 다니는 그는 종종 '정신 나간 정신과 의사'라 불리곤 합니다. 먼저 다가가고 찾아가는 소통을 위해 의사에겐 홈그라운드 같은 병원을 관두고 거리로 나오게 된 임재영 센터장의 사연에는 '자유 의지'에 대한 이해와 마음의 병에 대한 깊은 이해가 녹아있습니다. 환자들에게 손을 내밀고 무료 상담을 해주는 '찾아가는 고민상담소'를 운영하는 그의 이야기로부터 소통에서 먼저 마음을 여는 법을 배우고자 합니다.</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-xs-4">
-          <img src="./images/speakers/2017/speakers_ktw.jpg" class="img-circle center-block">
-        </div>
-        <div class="col-xs-8">
-          <h3>김태우(테오)</h3>
-          <p>김태우 타투이스트님은 한곡예술종합학교 미술원 디자인, 시각디자인에서 학사 학위를 받으시고 2006년에 &lt테오타투&gt를 개업, 그 후 2012년에는 디자인회사 '테오워크룸'을 개업하여 현대자동차, TROIS ROIS, COACH 등의 기업들과 협업하고 계십니다.</p>
-          <p>역사의 흐름과 함께해 온 타투는 단순한 유행의 상징을 넘어 새로운 소통의 언어로 재탄생되고 있습니다. 상처를 예술로 변화시키고 개인의 소중한 가치를 몸에 남기면서 테오 타투이스트의 타투는 몸의 피부를 미디어로 활용하여 스스로를 대변하는 메시지를 전달하는 자기표현의 최전선으로 발전해왔습니다. 움직이는 캔버스 위의 그림을 통해 나다운 개성을 표출하고 세상과 소통하는 그의 타투에 대해 알아봅니다.</p>
+        <div class="col-sm-12 col-md-8">
+          <h3 class="text-center text-md-left mt-2">{{ speaker.name }}</h3>
+          {{ speaker.explanation|linebreaks }}
         </div>
       </div>
-
-      <div class="row">
-        <div class="col-xs-4">
-          <img src="./images/speakers/2017/speakers_pjw.jpg" class="img-circle center-block">
-        </div>
-        <div class="col-xs-8">
-          <h3>박종원</h3>
-          <p>박종원 대표님은 심야서점, 독서모임, 작가와의 대화, 북파티, 공연 등 책으로 즐길 수 있는 다양한 프로그램을 운영하는 북카페 '북티크'의 대표입니다.</p>
-          <p>책을 만드는 출판사에서 독자를 만드는 서점으로, 박종원 대표는 북카페 '북티크'를 운영하며 책을 매개로 사람과 사람을 연결하는 일을 하고 있습니다. 사람들은 독서를 통해 지식을 습득하고 이를 다른 사람과 나눔으로써 새로운 가치를 얻기도 합니다. 사람들과 함께 자유롭게 책을 읽고 대화하는 문화를 나누는 '북티크'의 사례로부터 책과 사람의 연결, 책을 매개로 하는 사람과 사람의 연결,  공간에서 연결의 역할에 대해 이야기해보고자 합니다.</p>
-        </div>
-      </div>
-
-      <div class="row last" id="comingsoon">
-        <div class="col-xs-4">
-          <img src="./images/speakers/2017/speakers_lwy.jpg" class="img-circle center-block">
-        </div>
-        <div class="col-xs-8">
-          <h3>이원영</h3>
-          <p>이원영 대표님은 2015년도에 취임하신 씨엔엘프라자 대표이사이자, 현재 블루캔버스 사업의 사업장입니다.</p>
-          <p>FLUX 끊임없는 변화. 4차 산업혁명이라는 단어 속에 들어있는 무수한 기술과 그 기술들로 변화되는 세상속에 나라는 존재는 어떻게 변화되고 있을까요? 이 수많은 기술과 시도들은 무엇을 위한 것일까요? 나를 변화시키는 장면, 그리고 나로 인하여 변할 수 있는 누군가. 세상에 어떠한 행동도 헛되이 이루어지는 행동은 없습니다. 그 한 사람의 변화를 만나보세요. 그리고 당신의 소중한 시간에 의미를 담아보세요.</p>
-        </div>
-      </div>
+      {% endfor %}
 
     </div>
   </div>
