--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -3,11 +3,9 @@
 {% load static %}
 
 {% block main %}
-<main>
+<main style="background-color: {{setting.home_image.background_color}};">
     <div class="container">
-        <div class="img-wrapper">
-            <img src="images/index.jpg">
-        </div>
+        <img class="img-fluid" src="{{setting.home_image.image.url}}">
     </div>
 </main>
 {% endblock %}
