--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -106,6 +106,7 @@ footer {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  border-radius: 0;
 }
 
 .jumbotron h1 {
