--- a/core/templates/core/sponsors.html
+++ b/core/templates/core/sponsors.html
@@ -13,181 +13,22 @@
 
   <div class="sponsors">
     <div class="container">
+      
+      <img src="{% static 'core/images/biglogo.png' %}" class="img-fluid mx-auto mb-4 d-block">
+      <h2 class="text-center">with</h2>
 
-      <div class="row">
-
-        <div class="col-xs-2"></div>
-
-        <div class="col-xs-8">
-          <div class="thumbnail center-block" id="biglogo">
-            <img src="./images/biglogo.png">
-          </div>
+      <div class="card-columns">
+        {% for sponsor in sponsors %}
+        <div class="card border-0">
+          {% if sponsor.website_url %}
+          <a href="{{sponsor.website_url}}" target="_blank">
+            <img class="card-img p-4" src="{{sponsor.image.url}}" alt="{{sponsor.name}}">
+          </a>
+          {% else %}
+          <img class="card-img p-4" src="{{sponsor.image.url}}" alt="{{sponsor.name}}">
+          {% endif %}
         </div>
-
-        <div class="col-xs-2"></div>
-
-      </div>
-
-      <div class="row">
-
-        <div class="col-xs-12">
-          <p>with</p><br>
-        </div>
-
-      </div>
-
-      <div class="row">
-
-        <div class="col-xs-3"></div>
-
-        <div class="col-xs-6">
-          <div class="thumbnail center-block">
-            <a target="_blank" href="https://www.pentasecurity.com/?lang=ko">
-              <img src="./images/sponsors/2017/pentasecurity.png">
-            </a>
-          </div>
-        </div>
-
-        <div class="col-xs-3"></div>
-        
-      </div>
-
-      <div class="row">
-
-        <div class="col-xs-2"></div>
-
-        <div class="col-xs-4">
-          <div class="thumbnail center-block">
-            <a target="_blank" href="http://aif.postech.ac.kr/">
-              <img src="./images/sponsors/2017/ec.png">
-            </a>
-          </div>
-        </div>
-
-        <div class="col-xs-4">
-          <div class="thumbnail center-block">
-            <img src="./images/sponsors/2017/eedc.png">
-          </div>
-        </div>
-
-        <div class="col-xs-2"></div>
-
-      </div>
-
-      <div class="row">
-
-        <div class="col-xs-2"></div>
-
-        <div class="col-xs-4">
-          <div class="thumbnail center-block">
-            <a target="_blank" href="http://postechholdings.com/">
-              <img src="./images/sponsors/2017/gjjh.jpg">
-            </a>
-          </div>
-        </div>
-
-        <div class="col-xs-4">
-          <div class="thumbnail center-block">
-            <a target="_blank" href="https://www.facebook.com/postechstu">
-              <img src="./images/sponsors/2017/neonadeuli.png">
-            </a>
-          </div>
-        </div>
-
-        <div class="col-xs-2"></div>
-
-      </div>
-
-      <div class="row">
-
-        <div class="col-xs-3">
-          <div class="thumbnail center-block">
-            <a target="_blank" href="https://www.facebook.com/PoApper/?fref=ts">
-              <img src="./images/sponsors/2017/poapper.png">
-            </a>
-          </div>
-        </div>
-
-        <div class="col-xs-3">
-          <div class="thumbnail center-block">
-            <a target="_blank" href="https://www.facebook.com/postechpbs/?fref=ts">
-              <img src="./images/sponsors/2017/pbs.png">
-            </a>
-          </div>
-        </div>
-
-        <div class="col-xs-3">
-          <div class="thumbnail center-block">
-            <a target="_blank" href="https://www.mrpizza.co.kr/">
-              <img src="./images/sponsors/2017/mrpizza.png">
-            </a>
-          </div>
-        </div>
-
-        <div class="col-xs-3">
-          <div class="thumbnail center-block">
-            <a target="_blank" href="https://www.facebook.com/AgitPohang/?fref=ts">
-              <img src="./images/sponsors/2017/agit.jpg">
-            </a>
-          </div>
-        </div>
-
-      </div>
-
-      <div class="row">
-
-        <div class="col-xs-2"></div>
-
-        <div class="col-xs-6">
-
-          <div class="row">
-
-            <div class="col-xs-12">
-              <div class="thumbnail center-block">
-                <a target="_blank" href="https://www.twosome.co.kr:7009/microsite/2016/autumn/intro.asp">
-                  <img src="./images/sponsors/2017/twosome.jpg">
-                </a>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="row">
-
-            <div class="col-xs-4">
-              <div class="thumbnail center-block">
-                <a target="_blank" href="http://www.momstouch.co.kr">
-                  <img src="./images/sponsors/2017/momstouch.png">
-                </a>
-              </div>
-            </div>
-
-            <div class="col-xs-4">
-              <div class="thumbnail center-block">
-                <a target="_blank" href="http://www.codd.co.kr/">
-                  <img src="./images/sponsors/2017/ddangddang.png">
-                </a>
-              </div>
-            </div>
-
-            <div class="col-xs-4">
-              <div class="thumbnail center-block">
-                <img class="img-responsive" src="./images/sponsors/2017/aulete.jpg">
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-
-        <div class="col-xs-2">
-          <div class="thumbnail center-block">
-            <img src="./images/sponsors/2017/ocelot.png">
-          </div>
-        </div>
-
-        <div class="col-xs-2"></div>
-
+        {% endfor %}
       </div>
 
     </div>
