Make register page

--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -17,13 +17,13 @@
 
       <div class="row border-bottom pb-3 mb-3">
 
-        <div class="col-xs-12 col-md-6 border-md-right">
+        <div class="col-sm-12 col-md-6 border-md-right">
           <img class="img-fluid img-thumbnail mb-3" src="/static/core/images/tedx.png">
           <h3>About TEDx<br>x = independently organized event</h3>
           <p>TEDx는 널리 퍼져야할 아이디어(ideas worth spreading)라는 정신으로 사람들에게 TED스러운 경험을 나눌 수 있도록 지역적이고 자체적으로 조직되는 프로그램입니다. TEDx 행사에서는 TED 강연 영상과 현장의 연사들이 조화를 이루며 깊이 있는 논의와 소통에 불을 붙입니다. 이런 지역적이고 자체적으로 조직되는 행사를 TEDx라고 부르며, x는 독립적으로 조직된 TED 행사임을 가리킵니다. TED 컨퍼런스는 TEDx 행사를 위해서 가이드라인을 제공하지만, 독립적인 TEDx 행사는 (어떤 규칙이나 제한은 있지만) 자체적으로 조직됩니다. </p>
         </div>
 
-        <div class="col-xs-12 col-md-6">
+        <div class="col-sm-12 col-md-6">
           <img class="img-fluid img-thumbnail mb-3" src="/static/core/images/tedxpostech.png">
           <h3>{{event.year}} TEDxPOSTECH<br>{{event.theme}}</h3>
           {{event.theme_explanation|linebreaks}}
@@ -32,7 +32,7 @@
       </div>
 
       <div class="row">
-        <div class="col-xs-12 px-3">
+        <div class="col-sm-12 px-3">
           <h3>About TED</h3>
           <p>TED는 '널리 퍼져야 할 아이디어'를 위해 일하는 비영리적인 조직입니다. 30년 전 캘리포니아에서 열린 4일의 컨퍼런스를 시작으로 하여, TED는 여러 개의 계획과 사명을 이루기 위해 성장하였습니다. TED 컨퍼런스에서는는 1년에 2번, 세계를 선도하는 사상가와 실천가가 초청되어 18분 정도의 강연을 합니다. 그리고 이 강연들은 <a href="http://www.TED.com" target="_blank">TED.com</a>에서 어디서든 무료로 볼 수 있게 됩니다. Bill Gates, Jane Goodall, Elizabeth Gilbert, Sir Richard Branson, Nandan Nilekani, Philippe Starck, Ngozi Okonjo-Iweasla, Sal Knan, Daniel Kahneman 등 많은 분들이 TED에서 강연을 해주셨습니다.</p>
           <p>매년 열리는 TED 컨퍼런스는 캐나다 휘슬러에서의 TEDActive 동시 중계 이벤트와 함께 브리티시컬럼비아주 남서부의 밴쿠버에서 개최됩니다. 또한 매년 열리는 TEDGlobal 컨퍼런스는 브라질의 옛 수도인 라우데자네이루에서 개최됩니다. TED의 미디어 활동은 매일 새로운 TED Talks가 올라오는 TED.com, 전세계의 자원봉사자들로부터 번역된 자막과 대본을 제공하는 Open Translation Project, 그리고 교육적인 내용을 담고 있는 TED-Ed가 있습니다. TED는 세상을 바꾸고자 하는 뛰어난 인재들에게 그들의 소원을 실현시켜주기 위해 매년 TED Prize를 수여하고 있습니다. 또한 TEDx를 만들어 지역에서 개최하는 개개인들과 단체들을 지원하고, TED Fellows 프로그램을 통해 전세계에 있는 세상을 바꾸는 혁신가들의 놀라운 프로젝트와 활동들의 효과를 증폭시키기 위해 지원하고 있습니다.</p>
