--- a/core/templates/core/register.html
+++ b/core/templates/core/register.html
@@ -110,9 +110,9 @@
         </tbody>
       </table>
 
-      <div class="row pt-3 border-top">
+      <div class="row border-top">
 
-        <div class="col-sm-12 col-md-6 border-md-right">
+        <div class="col-sm-12 col-md-6 border-md-right mt-3">
           <img class="img-fluid img-thumbnail mb-3" src="/static/core/images/early_bird.png">
           <h3>Eary Bird Registration</h3>
           <p></p>
@@ -120,7 +120,7 @@
           <a href="#" role="button" class="btn btn-danger">Sold Out</a>
         </div>
 
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-6 mt-3">
           <img class="img-fluid img-thumbnail mb-3" src="/static/core/images/regular.jpg">
           <h3>Regular Registration</h3>
           <p>Regular 참가신청 비용은 예약 10,000원입니다. 신청은 10월 19일 밤 10시부터 가능하며, 참가신청을 보내신 후 납부 기간에 참가비 10,000원을 입금하시면 됩니다. TEDx의 규정에 따라 청중은 100명으로 제한되오니 양해 부탁드립니다.</p>
