--- a/core/templates/core/register.html
+++ b/core/templates/core/register.html
@@ -1,6 +1,7 @@
 {% extends 'core/base.html' %}
 
 {% load static %}
+{% load humanize %}
 
 {% block main %}
 <main>
@@ -19,95 +20,32 @@
           <div class="d-flex justify-content-center">
             <i class="text-center text-muted fas fa-calendar-alt h1 p-2 mx-auto"></i>
           </div>
-          <p class="text-center text-muted ">2017/11/04<br>토요일</p>
+          <p class="text-center text-muted">{{event.date|date:"Y/m/d"}}<br>{{day}}요일</p>
         </div>
         <div class="col-sm-6 col-md-3">
           <div class="d-flex justify-content-center">
             <i class="text-center text-muted fas fa-map-marker-alt h1 p-2 mx-auto"></i>
           </div>
-          <p class="text-center text-muted ">POSCO 국제관<br>1층 국제회의장</p>
+          <p class="text-center text-muted">{{event.place|linebreaksbr}}</p>
         </div>
         <div class="col-sm-6 col-md-3">
           <div class="d-flex justify-content-center">
             <i class="text-center text-muted far fa-clock h1 p-2 mx-auto"></i>
           </div>
-          <p class="text-center text-muted ">From 14:30<br>Until 20:30</p>
+          <p class="text-center text-muted">From {{event.start_at|time:"H:i"}}<br>Until {{event.end_at|time:"H:i"}}</p>
         </div>
         <div class="col-sm-6 col-md-3">
           <div class="d-flex justify-content-center">
             <i class="text-center text-muted fas fa-utensils h1 p-2 mx-auto"></i>
           </div>
-          <p class="text-center text-muted ">After Party<br>참가비 5,000원</p>
+          <p class="text-center text-muted">After Party<br>참가비 {{event.after_party_fee|intcomma}}원</p>
         </div>
       </div>
 
       <table class="table table-striped">
-        <thead>
-          <th colspan="2">행사 당일 일정(11월 4일 토요일)*</th>
-        </thead>
-        <tfoot>
-          <tr>
-            <td colspan="2">*행사 일정은 당일 사정에 의해 변동될 수 있습니다.</td>
-          </tr>
-          <tr>
-            <td colspan="2">**TED talk는 TED 강연 영상 중 하나를 상영하는 시간을 의미.</td>
-          </tr>
-          <tr>
-            <td colspan="2">***TEDx talks는 초청된 연사들의 강연하는 시간을 의미.</td>
-          </tr>
-          <tr>
-            <td colspan="2">****After Party 참가비는 5,000원입니다.</td>
-          </tr>
-          <tr>
-            <td colspan="2">****After Party는 C5 컨퍼런스 홀에서 진행되며 연사와 참가자간의 Q&A와 참가자간의 아이스브레이킹 등이 준비되어 있습니다.</td>
-          </tr>
-        </tfoot>
-        <tbody>
-          <tr>
-            <td>13:30 ~ 14:30</td>
-            <td>리허설</td>
-          </tr>
-          <tr>
-            <td>14:30 ~ 15:00</td>
-            <td>입장 및 현장 등록</td>
-          </tr>
-          <tr>
-            <td>15:00 ~ 15:30</td>
-            <td>오프닝 & TED Talk** #1</td>
-          </tr>
-          <tr>
-            <td>15:30 ~ 15:55</td>
-            <td>TEDx Talk #1</td>
-          </tr>
-          <tr>
-            <td>15:55 ~ 16:20</td>
-            <td>TEDx Talk #2</td>
-          </tr>
-          <tr>
-            <td>16:20 ~ 16:50</td>
-            <td>Break time, Icebreaking</td>
-          </tr>
-          <tr>
-            <td>16:50 ~ 17:10</td>
-            <td>TED Talk #2</td>
-          </tr>
-          <tr>
-            <td>17:10 ~ 17:35</td>
-            <td>TEDx Talk #3</td>
-          </tr>
-          <tr>
-            <td>17:35 ~ 18:00</td>
-            <td>TEDx Talk #4</td>
-          </tr>
-          <tr>
-            <td>18:00 ~ 18:10</td>
-            <td>클로징</td>
-          </tr>
-          <tr>
-            <td>18:30 ~ 20:30</td>
-            <td>After Party****</td>
-          </tr>
-        </tbody>
+        {% autoescape off %}
+        {{event.timetable}}
+        {% endautoescape %}
       </table>
 
       <div class="row border-top">
@@ -116,14 +54,14 @@
           <img class="img-fluid img-thumbnail mb-3" src="/static/core/images/early_bird.png">
           <h3>Eary Bird Registration</h3>
           <p></p>
-          <p>Early Bird 참가신청은 행사의 안정적인 자원확보를 목적으로 먼저 참가비를 내주시는 청중분들께 기존 10,000원인 참가비를 50% 할인해드리는 제도입니다. 참가 신청을 보내신 후 입금한 선착순 30명에게만 주어지는 혜택이며, 이에 따른 일반 참가자와의 차별은 전혀 없습니다.</p>
+          <p>Early Bird 참가신청은 행사의 안정적인 자원확보를 목적으로 먼저 참가비를 내주시는 청중분들께 기존 {{event.fee|intcomma}}원인 참가비를 {{event.early_bird_discount_rate}}% 할인해드리는 제도입니다. 신청은 {{event.early_bird_start_at|date:"m월 d일 H시"}}부터 가능하며, 참가 신청을 보내신 후 입금한 선착순 {{event.early_bird_capacity}}명에게만 주어지는 혜택입니다.</p>
           <a href="#" role="button" class="btn btn-danger">Sold Out</a>
         </div>
 
         <div class="col-sm-12 col-md-6 mt-3">
           <img class="img-fluid img-thumbnail mb-3" src="/static/core/images/regular.jpg">
           <h3>Regular Registration</h3>
-          <p>Regular 참가신청 비용은 예약 10,000원입니다. 신청은 10월 19일 밤 10시부터 가능하며, 참가신청을 보내신 후 납부 기간에 참가비 10,000원을 입금하시면 됩니다. TEDx의 규정에 따라 청중은 100명으로 제한되오니 양해 부탁드립니다.</p>
+          <p>Regular 참가신청 비용은 {{event.fee|intcomma}}원입니다. 신청은 {{event.regular_start_at|date:"m월 d일 H시"}}부터 가능하며, 참가신청을 보내신 후 납부 기간에 참가비 {{event.fee|intcomma}}원을 신청 폼 작성 후 표시되는 계좌로 입금하시면 됩니다. TEDx의 규정에 따라 청중은 100명으로 제한되오니 양해 부탁드립니다.</p>
           <a href="#" role="button" class="btn btn-danger">Register</a>
         </div>
 
