Make past event page to work with 2011 event

--- a/core/templates/core/organizers.html
+++ b/core/templates/core/organizers.html
@@ -9,7 +9,7 @@
   <div class="jumbotron" style="background-image: url({{setting.event_now.organizers_photo.url}});">
     <div class="container">
       <h1 class="display-4">Organizers</h1>
-      <p class="lead">{{setting.event_now.year}} TEDxPOSTECH을 준비한 {{organizers.length}}명의 {{setting.event_now.order|ordinal}} Organizer들을 소개합니다.</p>
+      <p class="lead">{{setting.event_now.year}} TEDxPOSTECH을 준비한 {{organizers.count}}명의 {{setting.event_now.order|ordinal}} Organizer들을 소개합니다.</p>
     </div>
   </div>
 
