--- a/core/templates/core/pastevent.html
+++ b/core/templates/core/pastevent.html
@@ -8,17 +8,20 @@
   <div class="jumbotron" style="background-image: url({{event.organizers_photo.url}});">
     <div class="container">
       <h1 class="display-4">{{event.year}}<br>TEDxPOSTECH</h1>
-      <p class="lead">{{event.year}} TEDxPOSTECH을 빛내주셨던 연사분들과 Organizer들을 소개합니다.</p>
+      <p class="lead">{{event.year}} TEDxPOSTECH을 빛내주셨던 연사분들{% if organizers %}과 Organizer들{% endif %}을 소개합니다.</p>
     </div>
   </div>
 
+  {% if event.theme %}
   <div class="bg-grey border-top border-bottom pt-4 pb-3 my-5">
     <div class="container">
       <h3>{{event.year}} TEDxPOSTECH {{event.theme}}</h3>
       {{event.theme_explanation|linebreaks}}
     </div>
   </div>
+  {% endif %}
 
+  {% if event.letter_title %}
   <div class="my-5 py-4">
     <div class="container">
 
@@ -45,6 +48,7 @@
 
     </div>
   </div>
+  {% endif %}
 
   <div class="bg-grey border-top border-bottom my-5">
     <div class="container">
@@ -68,7 +72,8 @@
 
     </div>
   </div>
-  
+
+  {% if sponsors %}
   <div class="container">
     
     <img src="{% static 'core/images/biglogo.png' %}" class="img-fluid mx-auto mb-4 d-block">
@@ -89,6 +94,7 @@
     </div>
 
   </div>
+  {% endif %}
 
 </main>
 {% endblock %}
