--- a/core/templates/core/register.html
+++ b/core/templates/core/register.html
@@ -55,14 +55,22 @@
           <h3>Eary Bird Registration</h3>
           <p></p>
           <p>Early Bird 참가신청은 행사의 안정적인 자원확보를 목적으로 먼저 참가비를 내주시는 청중분들께 기존 {{event.fee|intcomma}}원인 참가비를 {{event.early_bird_discount_rate}}% 할인해드리는 제도입니다. 신청은 {{event.early_bird_start_at|date:"m월 d일 H시"}}부터 가능하며, 참가 신청을 보내신 후 입금한 선착순 {{event.early_bird_capacity}}명에게만 주어지는 혜택입니다.</p>
-          <a href="#" role="button" class="btn btn-danger">Sold Out</a>
+          {% if event.early_bird_finished %}
+          <a href="{{event.early_bird_form_url}}" target="_blank" role="button" class="btn btn-danger disabled">Sold Out</a>
+          {% else %}
+          <a href="{{event.early_bird_form_url}}" target="_blank" role="button" class="btn btn-danger">Register</a>
+          {% endif %}
         </div>
 
         <div class="col-sm-12 col-md-6 mt-3">
           <img class="img-fluid img-thumbnail mb-3" src="/static/core/images/regular.jpg">
           <h3>Regular Registration</h3>
           <p>Regular 참가신청 비용은 {{event.fee|intcomma}}원입니다. 신청은 {{event.regular_start_at|date:"m월 d일 H시"}}부터 가능하며, 참가신청을 보내신 후 납부 기간에 참가비 {{event.fee|intcomma}}원을 신청 폼 작성 후 표시되는 계좌로 입금하시면 됩니다. TEDx의 규정에 따라 청중은 100명으로 제한되오니 양해 부탁드립니다.</p>
-          <a href="#" role="button" class="btn btn-danger">Register</a>
+          {% if event.early_bird_finished %}
+          <a href="{{event.regular_form_url}}" target="_blank" role="button" class="btn btn-danger disabled">Sold Out</a>
+          {% else %}
+          <a href="{{event.regular_form_url}}" target="_blank" role="button" class="btn btn-danger">Register</a>
+          {% endif %}
         </div>
 
       </div>
