Align home image to center

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -5,7 +5,7 @@
 {% block main %}
 <main style="background-color: {{setting.home_image.background_color}};">
     <div class="container">
-        <img class="img-fluid" src="{{setting.home_image.image.url}}">
+        <img class="img-fluid d-block mx-auto" src="{{setting.home_image.image.url}}">
     </div>
 </main>
 {% endblock %}
