--- a/core/templates/core/scripts.html
+++ b/core/templates/core/scripts.html
@@ -3,13 +3,11 @@
 <script src={% static 'core/bootstrap-4.1.1-dist/js/jquery-3.3.1.min.js' %}></script>
 <script src={% static 'core/bootstrap-4.1.1-dist/js/bootstrap.bundle.min.js' %}></script>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-68683638-1"></script>
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    ga('create', 'UA-68683638-1', 'auto');
-    ga('send', 'pageview');
-
+  gtag('config', 'UA-68683638-1');
 </script>
