--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -83,6 +83,24 @@
                     {% endif %}
                 </li>
 
+                {% if request.user.is_authenticated %}
+                <li class="nav-item">
+                    {% if request.resolver_match.url_name == 'help' %}
+                    <a class="nav-link active" href="{% url 'help' %}">Help <span class="sr-only">(current)</span></a>
+                    {% else %}
+                    <a class="nav-link" href="{% url 'help' %}">Help</a>
+                    {% endif %}
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/">Admin</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                </li>
+                {% endif %}
+
             </ul>
         </div>
     </nav>
