--- a/core/templates/core/help.html
+++ b/core/templates/core/help.html
@@ -8,6 +8,88 @@
   <div class="bg-grey border-top border-bottom py-4 my-5">
     <div class="container">
 
+      <h1>TEDxPOSTECH 홈페이지 관리를 위한 매뉴얼</h1>
+      <p>안녕하세요! TEDxPOSTECH 2nd Organizer였던 홈페이지 제작자 임범수입니다. 본 홈페이지는 2018년도 7월에 순수 HTML로 구성되었던 것을 Django Framework 기반으로 옮겨놓은 것 입니다. 컨버팅 과정에서 사소한 디자인을 수정하였고 다양한 크기의 디바이스를 지원하도록 새롭게 쓰여졌으며 코딩에 대해 아무것도 몰라도 홈페이지의 내용을 수정할 수 있도록 구조를 변경하였습니다. 여러분은 그저 행사에 대한 내용을 입력만 하면 Django가 알아서 해당 내용을 토대로 홈페이지를 구성할 것입니다. 다만, 데이터를 입력하는 방법을 전달해야 하기 때문에 문서로 남겨놓기보다는 잃어버릴 염려가 없도록 홈페이지 안에 내장시키기로 결정하였습니다.</p>
+
+      <h2>메뉴 살펴보기</h2>
+      <p>홈페이지 상단에 홈페이지 내의 여러 링크를 모아놓은 메뉴가 보이실 겁니다. 이 메뉴는 로그인을 한 상태와 안 한 상태에 따라 내용이 바뀌게 됩니다. 관리자 계정으로 로그인을 하게 되면 본 도움 페이지, 관리자 페이지, 그리고 로그아웃 메뉴가 추가적으로 생성됩니다. 이를 확인해보기 위해 로그인을 먼저 해봐야 할 것입니다. 로그인은 일반 사용자에게 노출을 줄이기 위해 홈페이지 어디에도 링크는 걸려있지 않습니다. 로그인 창은 <a href="/admin/" target="_blank">관리자 페이지</a>로 접속하려고 할 때 나타납니다. 관리자 계정은 따로 만들어서 전달하도록 할 예정이니, 후대 Organizer분들이 혹시 계정을 모르실 경우 선대 Organizer 혹은 저에게 연락하시면 됩니다. 관리자 페이지에 들어가서 로그인을 해보세요!</p>
+
+      <h2>관리자 페이지 살펴보기</h2>
+      <p>로그인을 하시면 Django administration이라는 제목의 페이지가 하나 뜰 것입니다. 크게 'AUTHENTICATION AND AUTHORIZATION'영역과 'CORE' 영역이 있는데 저희가 관리할 부분은 'CORE' 영역입니다. 혹시 관리자 계정이 추가적으로 필요하다면 AUTHENTICATION AND AUTHORIZATION에서 Users를 통해 추가할 수 있습니다. 다만, 필요성이 아마 없을 것이라고 생각되므로 자세한 방법은 생략하도록 하겠습니다. CORE 영역에 있는 각 Data Table들은 다음과 같습니다.</p>
+
+      <dl class="row">
+        <dt class="col-sm-3">Departments</dt>
+        <dd class="col-sm-9">Departments 테이블은 각 학과명과 약칭을 저장하고 있습니다. 포스텍의 학과가 늘어난다면 데이터의 추가가 필요하겠지만 아니라면 건들 필요는 없는 테이블입니다.</dd>
+
+        <dt class="col-sm-3">Events</dt>
+        <dd class="col-sm-9">Events 테이블은 행사에 대한 가장 많은 정보들을 담고 있는 테이블입니다. 행사 년도, 회차, 일시, 장소, 참가비, 신청 링크, 일정표, 테마, 오거나이저 메시지, 스폰서 등 대부분의 행사 관련 내용을 여기에 작성하게 됩니다. 매 해마다 한 줄의 데이터를 추가해야 합니다.</dd>
+
+        <dt class="col-sm-3">Home images</dt>
+        <dd class="col-sm-9">Home images 테이블은 홈페이지의 메인 화면에 띄울 이미지를 저장하는 테이블입니다. 각 이미지들을 구분하기 위한 이름과 이미지 파일, 그리고 배경색을 저장합니다. 배경색은 HEX 형태로 저장되며 #?????? 의 형태를 가지고 있습니다. RGB값을 16진수로 변환하여 이어붙인 후에 맨 앞에 #을 붙이면 됩니다.</dd>
+
+        <dt class="col-sm-3">Organizers</dt>
+        <dd class="col-sm-9">Organizers 테이블은 TEDxPOSTECH Organizer들의 정보를 저장하는 테이블입니다. 각 오거나이저 별로 이름, 주최 행사, 프로필 이미지(192x192), 학과, 그리고 학번을 저장합니다.</dd>
+
+        <dt class="col-sm-3">Settings</dt>
+        <dd class="col-sm-9">Settings 테이블은 현재 홈페이지 메인 화면의 이미지가 어떤 것인지, 그리고 현재 홈페이지가 담을 행사가 몇년도 행사인지를 저장하는 테이블입니다. Settings 테이블에는 단 한 줄의 데이터만 있어도 되며, 여러 줄의 데이터를 입력할 시 첫번째 데이터 이외에 나머지 데이터는 무시됩니다.</dd>
+
+        <dt class="col-sm-3">Speakers</dt>
+        <dd class="col-sm-9">Speakers 테이블은 연사분들의 정보를 저장하는 테이블입니다. 각 연사분들의 이름, 참여 행사 년도, 프로필 이미지(192x192), 연사 설명, 유튜브 링크(embed 버전), 그리고 공개 일자를 저장하고 있습니다. 유튜브 링크의 경우 유튜브 페이지에서 공유를 눌렀을 때 링크 공유에서 '퍼가기'를 누르면 iframe 코드를 이용해 퍼가는 기능이 있는데, 거기서 src=로 시작하는 부분의 주소를 따옴표 없이 입력해야 합니다. 형태는 https://www.youtube.com/embed/???????? 로 되어 있으며 잘 모르시겠으면 네이버나 구글에 유튜브 동영상 퍼가기 검색하시면 됩니다.</dd>
+
+        <dt class="col-sm-3">Sponsors</dt>
+        <dd class="col-sm-9">Sponsors 테이블은 스폰서의 정보를 저장하는 테이블입니다. 각 스폰서를 구분하기 위한 이름, 스폰서의 이미지(크기 상관 없음), 스폰서의 웹사이트 주소를 저장하고 있습니다. 오거나이저나 연사분들과 다르게 스폰서의 경우 연도가 바뀌어도 동일한 스폰서가 존재할 수 있기 때문에 Events 테이블에서 스폰서들을 저장하여 기존에도 있던 스폰서들도 저장할 수 있습니다. 따라서 Sponsors 테이블에는 해당 스폰서가 몇년도 행사의 스폰서인지는 저장하지 않습니다.</dd>
+      </dl>
+
+      <h2>데이터에 따라 변경되는 부분 살펴보기</h2>
+      <p>각 테이블들의 데이터가 홈페이지에 어떻게 표시되는지 살펴보도록 합시다.</p>
+
+      <dl class="row">
+        <dt class="col-sm-3">MENU</dt>
+        <dd class="col-sm-9">모든 페이지는 공통적으로 메뉴를 갖고 있는데, 여기서 Past Events의 하위 메뉴는 Events 테이블로부터 가져와집니다. Settings에서 현재 이벤트로 설정한 이벤트의 년도보다 이전의 행사들을 메뉴에 추가하는 형태이므로, Events 테이블에 17년도 행사가 들어있어도 Settings 테이블에서 현재 행사를 16년도로 해놓으면 Past Events의 하위 메뉴에는 11년도와 15년도만 표시되는 형태입니다. 이는 새로이 Events 테이블에 데이터를 입력할 때 무조건 공개되는 것을 막기 위함입니다.</dd>
+
+        <dt class="col-sm-3">HOME</dt>
+        <dd class="col-sm-9">HOME 페이지인 HOME에서는 Settings 테이블에서 설정된 Home image를 가져와 표시합니다. 이미지를 중앙에 배치하며 좌우로 배경색을 설정합니다. 이미지의 배경이 단색인 경우 Home images 테이블에서도 똑같은 단색으로 배경색을 설정하면 좋습니다.</dd>
+
+        <dt class="col-sm-3">ABOUT</dt>
+        <dd class="col-sm-9">ABOUT 페이지에서는 Settings 테이블에서 설정된 Event now로부터 Theme와 Theme explanation을 가져와 보여줍니다.</dd>
+
+        <dt class="col-sm-3">SPEAKERS</dt>
+        <dd class="col-sm-9">SPEAKERS 페이지에서는 Settings 테이블에서 설정된 Event now에 속한 Speakers 테이블의 데이터들을 가져와 보여줍니다. Youtube url을 비워놓으면 유튜브 영상이 표시 안되게 되어있습니다. Published datetime을 설정하면 공개 일자 이전에는 Speakers 페이지에서 Coming Soon이라고 표시되며, 공개 일자가 지난 후부터 연사 내용이 표시됩니다. image의 사이즈가 192x192가 아닐 경우 디자인이 깨질 수 있으니 리사이징 후에 업로드하길 바랍니다. 또한 화면 상단에 Speakers라는 큰 글자 밑의 문구가 행사 전에는 'TEDxPOSTECH을 빛내주실..."이지만 행사 다음날부터 'TEDxPOSTECH을 빛내주셨던'으로 변경됩니다. explanation의 경우 줄바꿈 두번으로 문단을 구분하므로 입력할 때 주의해주세요.</dd>
+
+        <dt class="col-sm-3">ORGANIZERS</dt>
+        <dd class="col-sm-9">ORGANIZERS 페이지에서는 Settings 테이블에서 설정된 Event now로부터 Organizers photo를 가져와 배경 사진으로 설정하고, 같은 Event now로부터 Letter title, Letter text, Letter end를 가져와 표시합니다. Letter text와 Letter end의 경우 줄바꿈 두번으로 문단을 구분하므로 입력할 때 주의해주세요. 그리고 Event now에 속한 Organizers 테이블의 데이터들을 가져와 보여줍니다. 화면 가로 사이즈에 따라서 한 가로줄에 오거나이저 사진이 1개, 2개, 또는 4개로 배열되며 줄을 꽉 채우지 못하면 가운데 정렬됩니다. image의 사이즈가 192x192가 아닐 경우 디자인이 깨질 수 있으니 리사이징 후에 업로드하길 바랍니다. 오거나이저들은 이름의 가나다순으로 표시됩니다. 또한 화면 상단에 Organizers라는 큰 글자 밑의 문구는 연도, 인원수, 차수에 맞게 알아서 변경됩니다.</dd>
+
+        <dt class="col-sm-3">SPONSORS</dt>
+        <dd class="col-sm-9">SPONSORS 페이지에서는 Settings 테이블에서 설정된 Event now에 속한 Sponsors 테이블의 데이터들을 가져와 보여줍니다. 이미지는 홈페이지 부분에서 자동적으로 상하좌우 여백을 추가하므로 최대한 여백 없이 편집하여 업로드하시면 좋습니다. 세로로 긴 이미지의 경우 가로폭을 꽉 채우도록 이미지가 커지다 보니 다른 이미지들에 비해 지나치게 커지게 되므로 좌우에 흰 배경을 넣어 가로로 길게 만들어 업로드하시면 좋습니다. 이에 대해서는 17년도 스폰서인 '카페 오셀롯'을 참고하시면 될 것 같습니다. 웹사이트 주소는 입력하면 스폰서 이미지에 링크가 걸리지만 입력 안해도 괜찮습니다.</dd>
+
+        <dt class="col-sm-3">REGISTER</dt>
+        <dd class="col-sm-9">REGISTER 페이지에서는 Settings 테이블에서 설정된 Event now에서 Date, Place, Start at, End at, After party fee를 가져와 아이콘 밑에 표시합니다. 또한 Timetable에 있는 HTML 코드를 그대로 표시하는데, 코드 자체는 그렇게 어렵지 않으니 전년도의 내용을 복사 + 붙여넣기한 뒤에 수정하여 사용하시면 될 것 같습니다. 잘 이해가 안가시는 경우 HTML Table이라고 검색하셔서 조금만 보시면 쉽게 사용하실 수 있을겁니다. 하단의 글귀는 Fee, After party fee, Early bird discount rate, Early bird capacity, Early bird start at, Regular start at의 내용에 따라 자동적으로 변경됩니다. 버튼의 링크 또한 Early bird form url, Regular form url로 설정되며, Early bird finished, Regular finished를 체크한 상태로 저장하시면 버튼이 Register가 아니라 Sold Out으로 표시되며 비활성화됩니다.</dd>
+
+        <dt class="col-sm-3">PAST EVENTS</dt>
+        <dd class="col-sm-9">PAST EVENTS 페이지에서는 Events 테이블에서 해당하는 년도의 데이터를 가져와 보여줍니다. 표시되는 내용 자체가 다른 페이지들의 내용을 모아놓은 것이기 때문에 표시 방법 역시 대부분 일치합니다.</dd>
+      </dl>
+
+      <h2>새로운 데이터 입력하기</h2>
+      <p>TEDxPOSTECH이 새로운 년도를 맞아 행사가 열리려고 한다면 다음과 같은 과정을 통해 데이터를 입력하세요.</p>
+
+      <ol>
+        <li>Events 테이블에 새로운 데이터 추가하기</li>
+        <li>Organizers 테이블에 새로운 데이터 추가하기</li>
+        <li>Speakers 테이블에 새로운 데이터 추가하기</li>
+        <li>Sponsors 테이블에 새로운 데이터 추가하기</li>
+        <li>Settings 테이블에서 Event now 변경하기</li>
+      </ol>
+
+      <p>HOME 페이지의 메인 이미지를 변경하고 싶다면 다음과 같은 과정을 통해 데이터를 입력하세요.</p>
+
+      <ol>
+        <li>Home images 테이블에 새로운 데이터 추가하기</li>
+        <li>Settings 테이블에서 Home image 변경하기</li>
+      </ol>
+
+      <h2>마치며</h2>
+      <p>긴 줄글 읽으시느라 고생 많으셨습니다. 이 홈페이지는 현재 <a href="http://fb.com/poapper">포애퍼</a> 서버에서 가동되고 있습니다. 때문에 매년 스폰서 목록에 포애퍼가 있습니다. 이 홈페이지가 유지된다면 스폰서 목록에 포애퍼를 포함시켜주시길 부탁드립니다. 혹시나 사용법을 모르겠다 하시는 분들은 제 <a href="mailto:lbs1163@postech.ac.kr">이메일</a>이나 <a href="https://www.facebook.com/profile.php?id=100003160846392">페이스북</a>, 또는 <a href="callto:010-7940-1163">휴대전화</a>로 연락주시면 알려드리도록 하겠습니다. 행사가 무사히 진행되길 기원합니다!</p>
+
     </div>
   </div>
 </main>
