--- a/core/templates/core/organizers.html
+++ b/core/templates/core/organizers.html
@@ -26,7 +26,7 @@
         </div>
       </div>
 
-      <div class="row no-gutters">
+      <div class="row no-gutters justify-content-center">
         {% for organizer in organizers %}
         <div class="col-sm-6 col-md-3 mb-3 visible-hover blur-hover">
           <div class="position-absolute w-100 h-100 d-flex justify-content-center align-items-center">
