Make thumbnail image

--- a/core/templates/core/head.html
+++ b/core/templates/core/head.html
@@ -6,6 +6,14 @@
 
 	<title>{{setting.event_now.year}} TEDxPOSTECH</title>
 
+    <meta property="og:title" content="TEDxPOSTECH">
+    <meta property="og:description" content="x = independently organized TED event">
+    <meta property="og:image" content="{% static 'core/images/thumbnail.png' %}">
+
+    <meta property="twitter:title" content="TEDxPOSTECH">
+    <meta property="twitter:description" content="x = independently organized TED event">
+    <meta property="twitter:image" content="{% static 'core/images/thumbnail.png' %}">
+
 	<link rel="stylesheet" href="{% static 'core/bootstrap-4.1.1-dist/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'core/fontawesome-free-5.1.0-web/css/all.css' %}">
 	<link rel="stylesheet" href="{% static 'core/css/style.css' %}">
