--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -105,3 +105,7 @@
         </div>
     </nav>
 </header>
+
+<a href="#" class="back-to-top d-inline position-fixed m-0">
+    <i class="fa fa-arrow-circle-up"></i>
+</a>
