--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -106,6 +106,6 @@
     </nav>
 </header>
 
-<a href="#" class="back-to-top d-inline position-fixed m-0">
-    <i class="fa fa-arrow-circle-up"></i>
+<a href="#" class="back-to-top d-flex justify-content-center align-item-middle position-fixed mb-3 mr-3 rounded-circle shadow">
+    <i class="fa fa-angle-up d-block p-0"></i>
 </a>
